tests/expectations/compiler/integers/u64/no_space_between_literal.out
Error [EPAR0370005]: expected '&&', '||', '&', '|', '^', '==', '!=', '<', '<=', '>', '>=', '+', '-', '*', '/', '**', '%', '<<', '>>', '[', '.', ';', '?', 'as' -- found 'u64'
    --> compiler-test:4:19
     |
   4 |         let i = 1 u64;
     |                   ^^^
